# TradeArena

./: .dockerignore  .env.example  .env.production  .gitignore  ARENA_REPORT.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
agents/ceo/: TOOLS.md
agents/ceo/memory/: MEMORY.md
agents/community-manager/: AGENTS.md
agents/founding-engineer/: AGENTS.md  HEARTBEAT.md  SOUL.md
agents/platform-engineer/: AGENTS.md  HEARTBEAT.md  SOUL.md
agents/tooling-engineer/: AGENTS.md  HEARTBEAT.md  SOUL.md
alembic/: env.py
alembic/versions/: 064a5d651473_add_audit_log_table.py  0996aff93fe7_add_github_oauth_columns.py  2cfb0e3dd9e3_add_follows_and_signal_comments_tables.py  31ef208347da_add_tos_consent_columns.py  48e054e14852_add_asset_type_column_to_signals.py  55de4aad29f5_add_api_key_hash_v2_bcrypt.py  7021957c0b78_add_webhook_url_to_creators.py  8bab8229bd92_add_ai_assisted_to_signals.py  a1b2c3d4e5f6_add_discord_oauth_columns.py  a3c7e1f4b829_add_email_drip_tables.py  a71d4350bc0d_add_bot_templates_table.py  a9c1e2f3b4d5_add_streak_columns_to_creators.py  arena.html  b80988abf0e5_add_elo_rating_matchmaking_tables.py  c4f2d8e19a37_add_tournament_matches_and_fields.py  d359a92d0ae1_initial_schema.py  dbdb51ff0a27_add_email_verification_columns.py  e1a2b3c4d5f6_add_signals_append_only_trigger.py  e5a1b3c7d920_add_twitter_oauth_columns.py  f62832412863_add_tournament_schedules_and_league_.py  f8b2d4e6a193_add_google_oauth_column.py  test_api_key_bcrypt.py  test_email.py  test_github_oauth.py  test_google_oauth.py  test_profile_and_ws.py
deploy/: Caddyfile  DEPLOY.md  backup.sh  deploy.sh  setup-hetzner.sh
deploy/nginx/: nginx-ip.conf  nginx.conf
docs/: api-key-rotation-runbook.md  ops-runbook.md
docs/community/: community-guidelines.md  discord-server-structure.md  faq.md  outreach-timeline.md  welcome-and-rules.md
docs/gtm/: devto-tutorial.md  discord-freqtrade.md  reddit-algotrading.md  show-hn.md
docs/launch/: announcements.md
examples/: README.md  mean_reversion_bot.py  momentum_bot.py  sentiment_bot.py
loadtests/: README.md  common.py  locustfile.py  seed.py  test_benchmarks.py
scripts/: README_solution.md  admin.html  arena.html  check_db.py  developer-guide.html  embed.js  init_db.py  landing.html  leaderboard.html  privacy.html  profile.html  quickstart.html  risk.html  rotate_api_keys.py  rules.html  run_bots.py  seed_demo.py  server.py  status.html  terms.html
scripts/assets/Asset Pack (Donarg)/Asset Pack (Donarg)/: LICENSE.txt
scripts/bots/: base.py  bb_bot.py  ema_bot.py  rsi_bot.py
sdk/: __init__.py  client.py
sdk/adapters/: __init__.py  ccxt_adapter.py  freqtrade_adapter.py
services/discord_bot/: __init__.py  bot.py  knowledge.py  paperclip.py  pins.py  roles.py  run.sh  setup.py  welcome.py
src/tradearena/: __init__.py  cli.py
src/tradearena/api/: deps.py  main.py  rate_limit.py  ws.py
src/tradearena/api/routes/: admin.py  auth.py  battles.py  creators.py  email.py  export.py  leaderboard.py  marketplace.py  matchmaking.py  oracle.py  profiles.py  reasoning.py  schedules.py  signals.py  social.py  tournaments.py  webhooks.py
src/tradearena/core/: analytics.py  asset_types.py  audit.py  battle_resolver.py  bots.py  cache.py  commitment.py  elo.py  email.py  exchanges.py  leveling.py  matchmaker.py  metrics.py  oracle.py  scheduler.py  scoring.py  seasons.py  validation.py  webhooks.py
src/tradearena/db/: database.py
src/tradearena/models/: __init__.py  battle.py  rating.py  responses.py  signal.py  tournament.py
tests/: conftest.py  test_ai_assisted.py  test_analytics.py  test_api_key_bcrypt.py  test_api_key_rate_limit.py  test_battle_resolver.py  test_battles_api.py  test_cache.py  test_cli.py  test_commitment.py  test_discord_bot.py  test_discord_oauth.py  test_discord_pins.py  test_discord_roles.py  test_discord_setup.py  test_discord_welcome.py  test_e2e_pipeline.py  test_elo.py  test_elo_integration.py  test_email.py  test_exchanges.py  test_export.py  test_github_oauth.py  test_google_oauth.py  test_health.py  test_marketplace.py  test_matchmaking.py  test_multi_asset.py  test_oracle.py  test_oracle_loadtest.py  test_profile_and_ws.py  test_registration.py  test_schedules.py  test_scoring.py  test_signal_rate_limit.py  test_signal_validation.py  test_signup_hardening.py  test_social.py  test_tournaments.py  test_twitter_oauth.py  (+1 more)
