[project]
name = "tradearena"
version = "0.1.0"
description = "Trustless trading signal competition platform — submit, track, and compete on trading signals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "TradeArena", email = "hello@tradearena.io" },
]
keywords = ["trading", "signals", "competition", "crypto", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "authlib>=1.3.0",
    "click>=8.1.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://tradearena.io"
Repository = "https://github.com/luxman89/TradeArena"
Documentation = "https://github.com/luxman89/TradeArena#readme"
"Bug Tracker" = "https://github.com/luxman89/TradeArena/issues"

[project.scripts]
tradearena = "tradearena.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradearena"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
