[project]
name = "tradearena"
version = "0.1.0"
description = "Trustless trading signal competition platform — submit, track, and compete on trading signals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "TradeArena", email = "hello@tradearena.io" },
]
keywords = ["trading", "signals", "competition", "crypto", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "sqlalchemy==2.0.48",
    "httpx==0.28.1",
    "python-dotenv>=1.0.0",
    "pydantic==2.12.5",
    "anthropic==0.84.0",
    "bcrypt==5.0.0",
    "PyJWT==2.12.1",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.11",
    "authlib==1.6.9",
    "click==8.3.1",
    "Pillow==12.1.1",
]

[project.optional-dependencies]
discord = [
    "discord.py>=2.7.0",
]

[project.urls]
Homepage = "https://tradearena.io"
Repository = "https://github.com/luxman89/TradeArena"
Documentation = "https://github.com/luxman89/TradeArena#readme"
"Bug Tracker" = "https://github.com/luxman89/TradeArena/issues"

[project.scripts]
tradearena = "tradearena.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
    "locust>=2.43.3",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradearena"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
